--- a/index.html
+++ b/index.html
@@ -7,40 +7,120 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>omnifood</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/general.css">
 
 </head>
 
 <body>
-    <section class="section-hero">
-        <div class="hero">
-            <div class="hero_text-box">
-                <h1 class="heading-primary">
-                    健康每一天！<br>優質餐食直達你家門
-                </h1>
-                <p class="hero-description">
-                    智能的全年365天食物訂閱服務，讓你重新享受健康的飲食。根據你的個人口味和營養需求量身定制。
-                </p>
-                <a href="#" class="btn btn--full margin-right-sm">訂閱我們</a>
-                <a href="#" class="btn btn--outline">了解更多</a>
-                <div class="delivered-meals">
-                    <div class="delivered-imgs">
-                        <img src="img/customers/customer-1.jpg" alt="送餐人員">
-                        <img src="img/customers/customer-2.jpg" alt="送餐人員">
-                        <img src="img/customers/customer-3.jpg" alt="送餐人員">
-                        <img src="img/customers/customer-4.jpg" alt="送餐人員">
-                        <img src="img/customers/customer-5.jpg" alt="送餐人員">
-                        <img src="img/customers/customer-6.jpg" alt="送餐人員">
+    <header class="header">
+        <img src="img/omnifood-logo.png" class="logo" alt="omnifood logo">
+        <nav class="main-nav">
+            <ul class="main-nav-liset">
+                <li><a class="main-nav-link" href="#">Section1</a></li>
+                <li><a class="main-nav-link" href="#">Section2</a></li>
+                <li><a class="main-nav-link" href="#">Section3</a></li>
+                <li><a class="main-nav-link" href="#">Section4</a></li>
+                <li><a class="main-nav-link nav-cta" href="#">Section5</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
+        <section class="section-hero">
+            <div class="hero">
+                <div class="hero_text-box">
+                    <h1 class="heading-primary">
+                        健康每一天！<br>優質餐食直達你家門
+                    </h1>
+                    <p class="hero-description">
+                        智能的全年365天食物訂閱服務，讓你重新享受健康的飲食。根據你的個人口味和營養需求量身定制。
+                    </p>
+                    <a href="#" class="btn btn--full margin-right-sm">訂閱我們</a>
+                    <a href="#" class="btn btn--outline">了解更多</a>
+                    <div class="delivered-meals">
+                        <div class="delivered-imgs">
+                            <img src="img/customers/customer-1.jpg" alt="送餐人員">
+                            <img src="img/customers/customer-2.jpg" alt="送餐人員">
+                            <img src="img/customers/customer-3.jpg" alt="送餐人員">
+                            <img src="img/customers/customer-4.jpg" alt="送餐人員">
+                            <img src="img/customers/customer-5.jpg" alt="送餐人員">
+                            <img src="img/customers/customer-6.jpg" alt="送餐人員">
+                        </div>
+                        <p class="delivered-text">去年我們已經提供了超過<span>25,000+</span>次的服務！</p>
                     </div>
-                    <p class="delivered-text">去年我們已經提供了超過<span>25,000+</span>次的服務！</p>
+                </div>
+
+                <div class="hero-img-box">
+                    <img src="img/hero.png" class="hero-img" alt="女生吃東西">
                 </div>
             </div>
+        </section>
 
-            <div class="hero-img-box">
-                <img src="img/hero.png" class="hero-img" alt="女生吃東西">
+        <section class="section-featured">
+            <div class="container">
+                <h2 class="heading-featured-in">AS FEATURED IN</h2>
+                <div class="logos">
+                    <img src="img/logos/techcrunch.png" alt="">
+                    <img src="img/logos/business-insider.png" alt="">
+                    <img src="img/logos/the-new-york-times.png" alt="">
+                    <img src="img/logos/forbes.png" alt="">
+                    <img src="img/logos/usa-today.png" alt="">
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
+
+        <section class="section-how">
+            <div class="container">
+                <span class="subheading">怎麼操作?</span>
+                <h2 class="heading-secondary">三個簡單步驟，每天都帶來健康</h2>
+            </div>
+            <div class="container grid grid--2-color grid--center-v">
+                <!-- 步驟1 -->
+                <div class="step-text-box">
+                    <p class="step-number">01</p>
+                    <h3 class="heading-tertiary">告訴我們你喜歡什麼!
+                    </h3>
+                    <p class="step-description">
+                        告訴我們你喜歡什麼（和不喜歡什麼）：永遠不要再浪費時間思考要吃什麼！
+                        Omnifood的人工智能將為您創建一個100％個性化的每週膳食計劃。
+                        它確保您獲得所需的所有營養和維生素，無論您遵循什麼飲食方式！
+                    </p>
+                </div>
+
+                <div class="step-img-box">
+                    <img src="img/app/app-screen-1.png" class="step-img" alt="第一步驟">
+                </div>
+
+                <!-- 步驟2 -->
+                <div class="step-img-box">
+                    <img src="img/app/app-screen-2.png" class="step-img" alt="第二步驟">
+                </div>
+                <div class="step-text-box">
+                    <p class="step-number">02</p>
+                    <h3 class="heading-tertiary">批准您的每週膳食計劃
+                    </h3>
+                    <p class="step-description">
+                        每週一次，批准由Omnifood人工智能為您生成的膳食計劃。您可以更改食材，更換整餐，甚至添加您自己的食譜。
+                    </p>
+                </div>
+                <!-- 步驟3 -->
+                <div class="step-text-box">
+                    <p class="step-number">03</p>
+                    <h3 class="heading-tertiary">在方便的時間接收餐點
+                    </h3>
+                    <p class="step-description">
+                        城市中最好的廚師每天為您烹飪選定的餐點，我們將按照您的要求將其遞送到您的門口。您可以每天更改交付時間表和地址！
+                    </p>
+                </div>
+
+                <div class="step-img-box">
+                    <img src="img/app/app-screen-3.png" class="step-img" alt="第三步驟">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
