第七章019結束

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>omnifood</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/general.css">
+    <!-- ionicons -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 </head>
 
@@ -120,7 +123,82 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-meals">
+            <div class="container center-text">
+                <span class="subheading">示範餐點</span>
+                <h2 class="heading-secondary">我們將從5,000+的食譜中進行選擇</h2>
+            </div>
+            <div class="container grid grid--3-color margin-bottom-md">
+                <div class="meal">
+                    <img src="img/meals/meal-1.jpg" class="meal-img" alt="餃子">
+                    <div class="meal-content">
+                        <div class="meal-tags">
+                            <span class="tag tag--vegetarian">純素</span>
+                        </div>
+                        <p class="meal-title">日式餃子</p>
+                        <ul class="meal-attributes">
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                                <span><strong>650</strong>卡路里</span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                                <span>營養評分&reg;<strong>74</strong></span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                                <span><strong>4.9</strong>評分 (357)</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="meal">
+                    <img src="img/meals/meal-2.jpg" class="meal-img" alt="餃子">
+                    <div class="meal-content">
+                        <div class="meal-tags">
+                            <span class="tag tag--vegetarian">純素</span>
+                            <span class="tag tag--paleo">原始食材</span>
+                        </div>
+                        <p class="meal-title">酪梨沙拉</p>
+                        <ul class="meal-attributes">
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                                <span><strong>400</strong>卡路里</span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                                <span>營養評分&reg;<strong>92</strong></span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                                <span><strong>4.4</strong>評分 (441)</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="diets">
+                    <h3 class="heading-tertiary">適用任何飲食方式：</h3>
+                    <ul class="list">
+                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>素食主義者</span></li>
+                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>純素主義者</span></li>
+                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>食用魚類者</span></li>
+                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>無麩質</span></li>
+                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>無乳糖</span></li>
+                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>生酮飲食</span></li>
+                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>古法飲食</span></li>
+                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>低FODMAP飲食</span></li>
+                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>適合兒童</span></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="container all-recipes">
+                <a href="#" class="link">查看所有&rarr;</a>
+            </div>
+        </section>
     </main>
+
 </body>
 
 </html>
