--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <img src="img/omnifood-logo.png" class="logo" alt="omnifood logo">
         <nav class="main-nav">
             <ul class="main-nav-liset">
-                <li><a class="main-nav-link" href="#">Section1</a></li>
-                <li><a class="main-nav-link" href="#">Section2</a></li>
-                <li><a class="main-nav-link" href="#">Section3</a></li>
-                <li><a class="main-nav-link" href="#">Section4</a></li>
-                <li><a class="main-nav-link nav-cta" href="#">Section5</a></li>
+                <li><a class="main-nav-link" href="#">關於我們</a></li>
+                <li><a class="main-nav-link" href="#">各式料理</a></li>
+                <li><a class="main-nav-link" href="#">客戶推薦</a></li>
+                <li><a class="main-nav-link" href="#">方案</a></li>
+                <li><a class="main-nav-link nav-cta" href="#">搶先體驗</a></li>
             </ul>
         </nav>
     </header>
@@ -181,20 +181,122 @@
                 <div class="diets">
                     <h3 class="heading-tertiary">適用任何飲食方式：</h3>
                     <ul class="list">
-                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>素食主義者</span></li>
-                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>純素主義者</span></li>
-                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>食用魚類者</span></li>
-                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>無麩質</span></li>
-                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>無乳糖</span></li>
-                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>生酮飲食</span></li>
-                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>古法飲食</span></li>
-                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>低FODMAP飲食</span></li>
-                        <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>適合兒童</span></li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>素食主義者</span></li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>純素主義者</span></li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>食用魚類者</span></li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>無麩質</span></li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>無乳糖</span></li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>生酮飲食</span></li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>古法飲食</span></li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>低FODMAP飲食</span></li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>適合兒童</span></li>
                     </ul>
                 </div>
             </div>
             <div class="container all-recipes">
                 <a href="#" class="link">查看所有&rarr;</a>
+            </div>
+        </section>
+
+        <section class="section-testimonials">
+            <div class="testimonials-container">
+                <span class="subheading">使用推薦</span>
+                <h2 class="heading-secondary">只要你嘗試過了，就回不去!</h2>
+                <div class="testimonials">
+                    <figure class="testimonial">
+                        <img src="img/customers/dave.jpg" class="testimonial-img" alt="">
+                        <blockquote class="testimonial-text">
+                            便宜、健康又美味的餐點，甚至不需要手動訂購！這感覺真的很神奇。
+                        </blockquote>
+                        <p class="testimonial-name">&mdash; 戴夫·布萊森</p>
+                    </figure>
+
+
+                    <figure class="testimonial">
+                        <img src="img/customers/ben.jpg" class="testimonial-img" alt="">
+                        <blockquote class="testimonial-text">
+                            這個AI算法真的太厲害了，它每次都能為我選擇到合適的餐點。不再需要擔心飲食問題真是太棒了！
+                        </blockquote>
+                        <p class="testimonial-name">&mdash; 本·哈德利</p>
+                    </figure>
+
+
+                    <figure class="testimonial">
+                        <img src="img/customers/steve.jpg" class="testimonial-img" alt="">
+                        <blockquote class="testimonial-text">
+                            他真是我的救星！我剛剛開始創業，所以沒有時間做飯。現在沒有他每天幫我準備的餐點我真的無法生活！
+                        </blockquote>
+                        <p class="testimonial-name">&mdash;史蒂夫·米勒</p>
+                    </figure>
+
+                    <figure class="testimonial">
+                        <img src="img/customers/hannah.jpg" class="testimonial-img" alt="">
+                        <blockquote class="testimonial-text">
+                            我為整個家庭都訂了，它不但節省了我們很多時間！而且所有的食物都是有機的、純素的，且不含塑料!
+                        </blockquote>
+                        <p class="testimonial-name">&mdash; 漢娜·史密斯</p>
+                    </figure>
+                </div>
+            </div>
+            <div class="gallery">
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-1.jpg" alt="食物照片">
+                    <!-- <figcaption>caption</figcaption> -->
+                </figure>
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-2.jpg" alt="食物照片">
+                </figure>
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-3.jpg" alt="食物照片">
+                </figure>
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-4.jpg" alt="食物照片">
+                </figure>
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-5.jpg" alt="食物照片">
+                </figure>
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-6.jpg" alt="食物照片">
+                </figure>
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-7.jpg" alt="食物照片">
+                </figure>
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-8.jpg" alt="食物照片">
+                </figure>
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-9.jpg" alt="食物照片">
+                </figure>
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-10.jpg" alt="食物照片">
+                </figure>
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-11.jpg" alt="食物照片">
+                </figure>
+                <figure class="gallery-item">
+                    <img src="img/gallery/gallery-12.jpg" alt="食物照片">
+                </figure>
+            </div>
+        </section>
+
+        <section class="section-pricing">
+            <div class="container">
+                <span class="subheading">兩種價格方案</span>
+                <h2 class="heading-secondary">價格已包括所有方案。用戶可以隨時取消訂閱。</h2>
+            </div>
+
+            <div class="container grid grid--2-color">
+                <div class="princing-plan">1</div>
+                <div class="princing-plan">2</div>
             </div>
         </section>
     </main>
