--- a/index.html
+++ b/index.html
@@ -294,9 +294,85 @@
                 <h2 class="heading-secondary">價格已包括所有方案。用戶可以隨時取消訂閱。</h2>
             </div>
 
-            <div class="container grid grid--2-color">
-                <div class="princing-plan">1</div>
-                <div class="princing-plan">2</div>
+            <div class="container grid grid--2-color margin-bottom-md">
+                <div class="princing-plan princing-plan--starter">
+                    <header class="plan-header">
+                        <p class="plan-name">入門版</p>
+                        <p class="plan-price"><span>$</span>2000</p>
+                        <p class="plan-text">每天一餐只需要70元</p>
+                    </header>
+                    <ul class="list">
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>每天<strong>1</strong>餐</span>
+                        </li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>上午11點至晚上9點</span>
+                        </li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>免費配送</span>
+                        </li>
+                        <li class="list-item"><ion-icon class="list-icon" name="close-outline"></ion-icon><span></span>
+                        </li>
+                    </ul>
+                    <div class="plan-sing-up">
+                        <a href="" class="btn btn--full">現在就開始!</a>
+                    </div>
+                </div>
+                <div class="princing-plan princing-plan--complete">
+                    <header class="plan-header">
+                        <p class="plan-name">完整版</p>
+                        <p class="plan-price"><span>$</span>3500</p>
+                        <p class="plan-text">每天一餐只需要120元</p>
+                    </header>
+                    <ul class="list">
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>每天<strong>2</strong>餐</span>
+                        </li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>全天候訂購</span>
+                        </li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>免費配送</span>
+                        </li>
+                        <li class="list-item"><ion-icon class="list-icon"
+                                name="checkmark-outline"></ion-icon><span>搶先獲得最新食譜</span>
+                        </li>
+                    </ul>
+                    <div class="plan-sing-up">
+                        <a href="" class="btn btn--full">現在就開始!</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="container grid">
+                <aside class="plan-details">
+                    已包含所有項目適用。您可以隨時取消。兩個方案都包括以下內容。
+                </aside>
+            </div>
+
+            <div class="container grid grid--4-color">
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+                    <p class="feature-title">不用在自己做飯了</p>
+                    <p class="feature-text">我們的訂閱服務涵蓋全年365天，包括主要的假日。</p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="nutrition-outline"></ion-icon>
+                    <p class="feature-title">本地有機食材</p>
+                    <p class="feature-text">我們的廚師只使用當地、新鮮和有機的食材來準備您的餐點。</p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="leaf-outline"></ion-icon>
+                    <p class="feature-title"><strong>0</strong>浪費</p>
+                    <p class="feature-text">我們所有的合作夥伴都使用可重複使用的容器來包裝您的所有餐點。</p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
+                    <p class="feature-title">隨時暫定</p>
+                    <p class="feature-text">有安排要去度假嗎？只需暫停您的訂閱，我們會退還未使用的天數。</p>
+                </div>
+
             </div>
         </section>
     </main>
