--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 </div>
                 <div class="feature">
                     <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
-                    <p class="feature-title">隨時暫定</p>
+                    <p class="feature-title">隨時暫停</p>
                     <p class="feature-text">有安排要去度假嗎？只需暫停您的訂閱，我們會退還未使用的天數。</p>
                 </div>
 
